--- a/project.yaml
+++ b/project.yaml
@@ -1,18 +1,22 @@
 specVersion: 0.0.1
-description: ''
-repository: ''
+description: 'Index Polkadot balance transfer events using SubQuery'
+repository: 'https://github.com/your-username/polkadot-transfers-subquery'
 schema: ./schema.graphql
+
 network:
   endpoint: 'wss://polkadot.api.onfinality.io/public-ws'
   dictionary: 'https://api.subquery.network/sq/subquery/dictionary-polkadot'
+
 dataSources:
   - name: main
     kind: substrate/Runtime
-    startBlock: 1
+    startBlock: 1000000
     mapping:
+      file: ./src/mappings.ts
       handlers:
         - handler: handleEvent
           kind: substrate/EventHandler
           filter:
             module: balances
             method: Transfer
+
